Closed
Bug 1652039
Opened 5 years ago
Closed 5 years ago
Fix clang-tidy with External and Alpha Checkers
Categories
(Developer Infrastructure :: Source Code Analysis, defect)
Developer Infrastructure
Source Code Analysis
Tracking
(firefox80 fixed)
RESOLVED
FIXED
mozilla80
Tracking | Status | |
---|---|---|
firefox80 | --- | fixed |
People
(Reporter: tjr, Assigned: freddy)
Details
Attachments
(1 file)
When building MozillaTidyModule.cpp
, the external checks fail like this:
[task 2020-07-09T20:26:24.145Z] /builds/worker/fetches/llvm-project/llvm/tools/clang/tools/extra/clang-tidy/mozilla/external/ExternalChecks.inc: In member function 'virtual void clang::tidy::MozillaModule::addCheckFactories(clang::tidy::ClangTidyCheckFactories&)':
[task 2020-07-09T20:26:24.145Z] /builds/worker/fetches/llvm-project/llvm/tools/clang/tools/extra/clang-tidy/mozilla/external/ExternalChecks.inc:7:7: error: 'TempChecker' was not declared in this scope
[task 2020-07-09T20:26:24.145Z] CHECK(TempChecker, "temp-checker")
Playing around a little bit I figured out that the Includes file needs to be included. I presume this also needs to happen for the alpha checkers too.
Reporter | ||
Comment 1•5 years ago
|
||
Assignee | ||
Updated•5 years ago
|
Assignee: tom → fbraun
Pushed by fbraun@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/be83a8ba9f7c
Include checks in subdirectories in MozillaTidyModule.cpp r=andi
![]() |
||
Comment 3•5 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 5 years ago
status-firefox80:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla80
Updated•3 years ago
|
Product: Firefox Build System → Developer Infrastructure
You need to log in
before you can comment on or make changes to this bug.
Description
•