Bug 1652039 - Include checks in subdirectories in MozillaTidyModule.cpp r=andi

Differential Revision: https://phabricator.services.mozilla.com/D83119